<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/AddYourOwnProductTextView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="#FFEB3B"
            android:fontFamily="@font/helmi_font"
            android:gravity="center"
            android:text="@string/add_your_own_product"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/AddYourOwnProductTextView"
            app:layout_constraintVertical_bias="1.0"
            tools:layout_editor_absoluteX="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/categorytextview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"

                    android:layout_marginTop="10dp"
                    android:text="@string/product_category"
                    android:textSize="26sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Spinner
                    android:id="@+id/productcategoryspinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:padding="16dp"
                    android:entries="@array/category_entries"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/categorytextview" />

                <TextView
                    android:id="@+id/productNameTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/product_name"
                    android:textSize="26sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/productcategoryspinner" />

                <EditText
                    android:id="@+id/productNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:autofillHints=""
                    android:hint="@string/enter_you_product_name"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:textColorHint="#757575"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/productNameTextView" />

                <TextView
                    android:id="@+id/productDescriptionTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/product_description"
                    android:textSize="26sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/productNameEditText" />

                <EditText
                    android:id="@+id/productDescriptionEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:hint="enter the product description"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:textColorHint="#757575"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/productDescriptionTextView"
                    tools:ignore="HardcodedText"
                    android:autofillHints="" />

                <TextView
                    android:id="@+id/priceTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:layout_marginStart="16dp"
                    android:textSize="26sp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/productDescriptionEditText" />

                <EditText
                    android:id="@+id/priceEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/enter_your_product_price"
                    android:textColorHint="#757575"
                    app:layout_constraintTop_toBottomOf="@+id/priceTextView"
                    tools:layout_editor_absoluteX="0dp"
                    android:inputType="numberDecimal"
                    android:autofillHints="" />

                <TextView
                    android:id="@+id/promotionTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/promotion"
                    android:layout_marginStart="16dp"
                    android:textSize="26sp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/priceEditText"
                    tools:layout_editor_absoluteX="0dp" />


                <EditText
                    android:id="@+id/promotionEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/enter_your_promotion_value"
                    android:textColorHint="#757575"
                    app:layout_constraintTop_toBottomOf="@+id/promotionTextView"
                    tools:layout_editor_absoluteX="16dp"
                    android:inputType="numberDecimal"
                    android:autofillHints="" />

                <TextView
                    android:id="@+id/sizeTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/available_sizes"
                    android:textSize="26sp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/promotionEditText" />

                <CheckBox
                    android:id="@+id/sizeCheckBox"
                    android:layout_width="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"

                    android:text="@string/_38_39_40_41_42_43_44_45"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sizeTextView" />

                <TextView
                    android:id="@+id/productImageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/product_image"
                    android:textSize="26sp"
                    app:layout_constraintTop_toBottomOf="@+id/sizeCheckBox" />

                <ImageView
                    android:id="@+id/imageViewProduct"
                    android:layout_width="375dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/productImageView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/productImageView"
                    android:contentDescription="@string/todo" />

                <Button
                    android:id="@+id/buttonSelectImage"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Select Image"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageViewProduct" />

                <Button
                    android:id="@+id/buttonAddProduct"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Add Product"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/buttonSelectImage" />





            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>